[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Entities/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Entities/Scripts/Enemy.gd" type="Script" id=2]

[node name="Enemy" index="0" groups=[
"Enemy",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="dmg_timer" type="Timer" parent="." index="2"]
wait_time = 0.05
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="timeout" from="dmg_timer" to="." method="_on_dmg_timer_timeout"]
